update mysql, refine, tailwindcss, linux, java